<resources>
    <string name="app_name">Zoomenta</string>
    <string name="action_logout">Log Out</string>
    <string name="shared_preferences_login_object">MyProfile</string>
    <string name="settings_url_rest_api">https://zoomenta.menta-lb.com/api/MobileAPI/</string>
    <string name="message_error_get_user_info">Error getting user information\n</string>
    <string name="message_signing_in">Signing You In</string>
    <string name="landing_fragem_btn_retry">Retry</string>
    <string name="btn_login">Login</string>
    <string name="user_properties_title">Title</string>
    <string name="user_properties_email">Email Address</string>
    <string name="user_properties_first_name">First Name</string>
    <string name="user_properties_middle_name">Middle Name</string>
    <string name="user_properties_last_name">Last Name</string>
    <string name="user_properties_date_of_birth">Date Of Birth</string>
    <string name="list_view_txt_delivery_note_date">Note Date</string>
    <string name="open_camera">Scan A Barcode</string>
    <string name="action_profile">View Profile</string>
    <string name="action_history">View Scanning History</string>
    <string name="delivery_note_history_header_id">ID</string>
    <string name="delivery_note_history_header_date">Date</string>
    <string name="seperator">|</string>
    <string name="message_error_get_delivery_note_history">Error getting Delivery Note Details\n</string>
    <string name="txt_preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="txt_empty_delivery_notes_history">No Data Retreived</string>
    <string name="textinput_error">Error Occurred</string>
    <string name="listViewTxtDeliveryNoteName">Delivery Name</string>
    <string name="listViewTxtDeliveryNotePortName">Port Name</string>
    <string name="listViewTxtDeliveryNoteStatus">Status</string>
    <string name="landing_fragem_btn_go_to_login">Go To Login</string>
    <string name="shared_preferences_otp">OTP</string>
    <string name="listViewTxtDeliveryNoteId">Id</string>
    <string name="listViewTxtDeliveryNoteScanningDate">Scanning Date</string>
    <string name="message_error_submit_scanning">Error submit scanned value</string>
    <string name="message_scanning_success">Scanning Submitted Successfully</string>
    <string name="message_no_scanned_value">Please Scan A Barcode</string>
    <string name="user_properties_fullname">Full Name</string>
    <string name="errorText_FromDateLessThanToDate">From date should be less than to date</string>
    <string name="errorText_noBarcodeScanned">No value Scanned, please scan a barcode</string>
    <string name="message_error_resource_not_found">Resource Not Found</string>
    <string name="message_error_internal_server_error">Internal Server Error</string>
    <string name="message_error_unknown_error">Unknown Error Occurred</string>
    <string name="delivery_note_history_header_from_date">From:</string>
    <string name="delivery_note_history_header_to_date">To:</string>
    <string name="delivery_note_history_fragment_title">Home</string>
    <string name="user_profile_fragment_title">Profile</string>
    <string name="login_welcome_message">Welcome to Zoomenta\n Please enter the code provided by your company administrator</string>
    <string name="close">X</string>
    <string name="txtScanPreviewHeader"><b>Scan Result</b>\n If the barcode was not scanned you can type the delivery note number manually below, then submit.</string>
    <string name="barcode_value">Barcode Value</string>
    <string name="enter_barcode_manually">Enter Barcode Manually</string>
    <string name="edit">Edit</string>
    <string name="listViewTxtCardName">Card Name</string>
    <string name="listViewTxtCardId">Id</string>
    <string name="title_activity_delivery_note_details">DeliveryNoteDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="accountNumber">Account No</string>
    <string name="name">Name</string>
    <string name="NameAr">Arabic Name</string>
    <string name="listViewTxtAccountNumber">Account #</string>
    <string name="name_ar">Name Ar</string>
    <string name="txt_cards_count">Quantity</string>
    <string name="back">Back</string>
    <string name="delivery_note_details_activity_header">Delivery Note</string>
    <string name="message_error_connection_failure">Zoomenta is facing connection error, please try again later.\nSorry for the inconvenience</string>
</resources>