<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/list_delivery_notes_history_row"
    android:background="@drawable/delivery_note_history_table_borders_odd"
    >

    <TextView
        android:id="@+id/listViewTxtCardId"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/listViewTxtCardId"/>

    <TextView
        android:id="@+id/listViewTxtAccountNumber"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/listViewTxtAccountNumber"/>

    <TextView
        android:id="@+id/listViewTxtNameEn"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:textAlignment="textStart"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/name"/>
    <TextView
        android:id="@+id/listViewTxtCardNameAr"
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        />


</LinearLayout>
