<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >
    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/mentaprogress"
        android:layout_height="wrap_content">
    </ProgressBar>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"
        android:adjustViewBounds="true"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtResultsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            style="@style/ScanPreviewHeader"
            android:text="@string/txtScanPreviewHeader"  />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtResultsBody"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtResultsHeader"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/barcode_value"
            android:inputType="text"
            android:lines="1"
            android:gravity="center" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textinput_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtResultsBody"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitScanned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_below="@+id/textinput_error"
            android:text="@string/submit" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOpenCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmitScanned"
            android:layout_centerHorizontal="true"
            android:text="@string/open_camera" />
</RelativeLayout>
