<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.fragments.UserProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"

        android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/user_properties_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/user_properties_fragment_txt_title"
            android:enabled="false"
            android:layout_margin="@dimen/input_texts_margin"
            android:inputType="text">

        </com.google.android.material.textfield.TextInputEditText>
    </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_properties_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_properties_fragment_txt_email"
                android:enabled="false"
                android:layout_margin="@dimen/input_texts_margin"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_properties_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_properties_fragment_txt_first_name"
                android:enabled="false"
                android:layout_margin="@dimen/input_texts_margin"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </RelativeLayout>


        <RelativeLayout android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_properties_middle_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_properties_fragment_txt_middle_name"
                android:enabled="false"
                android:layout_margin="@dimen/input_texts_margin"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </RelativeLayout>


        <RelativeLayout android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_properties_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_properties_fragment_txt_last_name"
                android:enabled="false"
                android:layout_margin="@dimen/input_texts_margin"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </RelativeLayout>


        <RelativeLayout android:layout_width="match_parent"

            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:text="@string/user_properties_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_properties_fragment_txt_date_of_birth"
                android:enabled="false"
                android:layout_margin="@dimen/input_texts_margin"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </RelativeLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>