<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarContainr"
            android:theme="@style/Theme.Zoometa.AppBarOverlay"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/zoomenta_green"
                app:popupTheme="@style/Theme.Zoometa.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/errorTextGroup"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textinput_error"
                android:layout_width="wrap_content"
                android:text="@string/textinput_error"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone"
                android:hint="error" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_empty_delivery_notes_history"
                android:text="@string/txt_empty_delivery_notes_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:visibility="gone"
                android:hint="error" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:indeterminateDrawable="@drawable/mentaprogress"
            android:layout_height="wrap_content" >
        </ProgressBar>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/container_header_name"
            android:layout_margin="@dimen/delivery_note_details_header_margine"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/listViewTxtDeliveryNoteName"
                style="@style/DeliveryNoteHistoryTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </TextView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/txt_delivery_note_name"
                android:layout_height="wrap_content">

            </com.google.android.material.textview.MaterialTextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/container_header_count"
            android:layout_margin="@dimen/delivery_note_details_header_margine"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/txt_cards_count"
                style="@style/DeliveryNoteHistoryTextView"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            </TextView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/txt_cards_count_display"
                android:layout_height="wrap_content">

            </com.google.android.material.textview.MaterialTextView>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"

            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/tableContainer"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:id="@+id/header_group"
                    android:background="@drawable/delivery_note_history_table_headers"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/ListTableHeader"
                        android:text="@string/listViewTxtCardId"
                        android:visibility="gone"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        style="@style/ListTableHeader"
                        android:text="@string/accountNumber"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/ListTableHeader"
                        android:text="@string/name"
                        android:visibility="gone"
                        >
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        style="@style/ListTableHeader"
                        android:text="@string/name"
                        >
                    </TextView>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/list_delivery_notes_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>